--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "lucide-react": "^0.536.0",
     "next": "14.2.31",
     "react": "^18",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-hook-form": "^7.62.0",
     "react-resizable": "^3.0.5",
